# SkiOptimier

./: .gitignore  README.md  SKI_ROUTE_PLANNER_SPEC.md  pyproject.toml  routes_london_all.json  ski-run.sh  ski_resorts_v2.json  ski_route_planner.jsx  ticket_data.json
flight_search/: cli.py  formatter.py  scrape.py
ski_planner/: __init__.py  cli.py  formatter.py  matcher.py  price_search.py  routes.py  ticket.py  travel_sites.json
skills/ski/: SKILL.md
skills/ski-ticket/: SKILL.md
web/: index.html  package-lock.json  package.json
web/api/: confirm.js
web/src/: App.jsx  main.jsx  routes-cache.js
